# backend/src/api/controllers/user.ts
@@ -1,13 +1,16 @@
 import * as express from 'express'
 import {
   writeJsonResponse,
+  writeResponse401,
   writeResponse500,
 } from '@root/utils/api/expressHelpers'
 import logger from '@root/utils/logger'
-import { insertUser } from '@root/db/actions/userActions'
+import { insertUser } from '@root/actions/userActions'
+import { getAllReviewsByUser, insertReview } from '@root/actions/reviewActions'
 import { isNullOrEmpty } from '@root/utils/common'
 import { isErrorModel } from '@root/models/errorModel'
-import { isUserModel } from '@root/models/userModel'
+import { isReviewModel, isUserModel } from '@root/models/prismaModels'
+import { isAuthRequest } from '../middleware/IAuthRequest'
 
 export function createUser(req: express.Request, res: express.Response): void {
   const { email, password } = req.body
@@ -45,4 +48,51 @@ export function createUser(req: express.Request, res: express.Response): void {
       writeResponse500(res)
       return
     })
+}
+
+export async function addReview(
+  req: express.Request,
+  res: express.Response
+): Promise<void> {
+  try {
+    if (!isAuthRequest(req)) {
+      writeResponse401(res)
+      return
+    }
+
+    const { externalId, content } = req.body
+
+    const review = await insertReview(req.userId, externalId, content)
+
+    if (!isReviewModel(review)) {
+      writeResponse500(res)
+      return
+    }
+
+    writeJsonResponse(res, 201, { reviewId: review.id })
+
+    return
+  } catch (error) {
+    logger.error(`addReview error: ${error}`)
+    writeResponse500(res)
+  }
+}
+
+export async function getReviews(
+  req: express.Request,
+  res: express.Response
+): Promise<void> {
+  try {
+    if (!isAuthRequest(req)) {
+      writeResponse401(res)
+      return
+    }
+
+    const reviews = await getAllReviewsByUser(req.userId)
+
+    writeJsonResponse(res, 200, { reviews: reviews })
+  } catch (error) {
+    logger.error(`getReviews error: ${error}`)
+    writeResponse500(res)
+  }
 }
